<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ajustes">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lastupdate"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textAlignment="center"
            android:textSize="29sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/temperatura"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tmpmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/valor_m_ximo"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/tmpmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/valor_m_nimo"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|number"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textmaxtemp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="30°"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textmintemp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="-30°"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/humedad"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hummax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Valor Máximo"
                    android:inputType="number"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/hummin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Valor Mínimo "
                    android:inputType="number"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textmaxhum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="100"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textminhum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/alertas"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/temperatura"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/tmpmaxcheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/m_ximo" />

            <CheckBox
                android:id="@+id/tmpmincheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/m_nimo" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/humedad"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/hummaxcheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/m_ximo" />

            <CheckBox
                android:id="@+id/hummincheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/m_nimo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Registros Máximos"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/registrosmax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/button_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar" />

    </LinearLayout>

</FrameLayout>